--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 #map {
     height: 250px;
-    width: 250px;
+    width: 450px;
     margin: 5px 5px 5px 25px;
 }
 #results-container {
@@ -10,4 +10,17 @@
 
 .button {
     text-align: center;
+}
+
+.custom-map-control-button {
+    background-color: rgb(255, 255, 255);
+    border: 0;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+    margin: 10px 10px;
+    padding: 0 0.5em;
+    font: 400 18px Roboto, Arial, sans-serif;
+    overflow: hidden;
+    height: 40px;
+    cursor: pointer;
 }
