--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,7 @@
 #map {
-    height: 250px;
-    width: 450px;
-    margin: 5px 5px 5px 25px;
+    height: 300px;
 }
-#results-container {
+#results-container, #search-history {
     text-align: center;
     align-items: center;
 }
